Updated to use postgresql instead of sqlite

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MovieContext": "Data Source=MvcMovie.db"
+    "MovieContext": "Data Source=MvcMovie.db",
+    "MovieContextPG": "Host=localhost;Port=5433;Username=postgres;Password=admin;Database=MvcMovie"
   }
 }
